--- a/sass/principal/_styles.scss
+++ b/sass/principal/_styles.scss
@@ -7,7 +7,7 @@ html {
     font-family: $montserrat;
     color: white;
     width: 100vw;
-    overflow-x: hidden;
+    overflow-x: hidden!important;
 
     header {
         display: flex;
@@ -49,6 +49,7 @@ html {
             font-size: 1.5em;
             z-index: 10;
             transform: translateX(35vw);
+            visibility: hidden;
             transition: 0.5s;
     
             li {
@@ -94,6 +95,7 @@ html {
 
         #menu.ouvrir {
             transform: translateX(0);
+            visibility: visible;
         }
     }
     
@@ -336,6 +338,8 @@ html {
 // Tablettes
 @media only screen and (min-width: 769px) and (max-width: 1024px) {
     html {
+        overflow-x: hidden!important;
+
         header {  
             .menu-nav {
                 font-size: 1.25em;
@@ -454,6 +458,7 @@ html {
 // Petites tablettes / Grands mobiles
 @media only screen and (min-width: 601px) and (max-width: 768px) {
     html {
+        overflow-x: hidden!important;
         header {    
             .menu-nav {
                 font-size: 1.25em;
@@ -624,6 +629,7 @@ html {
 // Mobiles
 @media only screen and (max-width: 600px) {
     html {
+        overflow-x: hidden!important;
         header {    
             .menu-nav {
                 font-size: 1em;
@@ -640,6 +646,7 @@ html {
 
             #menu.ouvrir {
                 transform: translateX(0);
+                visibility: visible;
             }
         }
     
@@ -734,7 +741,8 @@ html {
             
         }
 
-        .projet {    
+        .projet {   
+            height: 100%; 
             .contenu {    
                 .titre {
                     font-size: 2em;
